# OpenWorld

./: Cargo.toml  readme.md
experiments/: raycast.py  readme.md
src/: advanced_logging.rs  direction.rs  entity.rs  input.rs  main.rs  physics.rs  player.rs  time_keep.rs  world.rs
src/assets/: mesh_shader.wgsl  voxel_shader.wgsl
src/blocks/: mod.rs  plants.rs  stones.rs
src/render/: camera.rs  mesh.rs  mod.rs  quad.rs  shader.rs  text.rs  texture.rs  vertex.rs  window_state.rs
src/render/voxel/: mod.rs  voxel.rs  voxel_mesh.rs
